--- a/Mulliganaceous2.css
+++ b/Mulliganaceous2.css
@@ -1,95 +1,63 @@
 @page {
     size:8.5in 11in;
-    margin-left: 0.5in;
-    margin-right: 0.5in;
+    margin-left: 0.75in;
+    margin-right: 0.75in;
     marks: cross;
 }
 
 * {
     margin: 0in;
-    font-family: "Noto Sans";
+    font-family: "Ubuntu";
     font-size: 12pt;
 }
 
-h1 {
-    font-family: "Century Gothic";
-    font-size: 20pt;
-    font-weight: bold;
-    text-align: center;
-    border-width: 3pt;
-    border-color: black;
-    border-style: solid;
-    border-collapse: collapse;
-    line-height: 1;
-    box-sizing: border-box;
-    height: 48pt;
-    width: 100%;
-    background-color: lightblue;
-}
-
-st {
-    font-family: "Century Gothic";
-    font-size: 10pt;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 8pt;
-    display: block;
-    border-collapse: collapse;
-}
-
-h2 {
-    background-color:lightgreen;
-    font-family: "Century Gothic";
+h1, h1 * {
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: lighter;
     font-size: 16pt;
-    border-bottom: 3px solid black;
+    text-align: center;
+    line-height: 1;
+    
+    width: 100%;
+    background-color: skyblue;
 }
 
-h3 {
-    background-color:#CCCCCC;
-    font-weight: normal;
-    width: 75%;
+h2, h2 * {
+    font-size: 12pt;
+    font-weight: lighter;
+    
+    text-indent: 2em 5em;
+    border-bottom: 1px solid black;
 }
 
-p {
+h3, h3 *{
+    background-color:#EEEEEE;
+    font-weight: bold;
+    width: 100%;
+    font-size: 10pt;
+}
+
+p, p * {
     line-height: 1.5;
-    padding-bottom: 1em;
+    font-size: 10pt;
+    margin-bottom: 0.5em;
+}
+
+ul {
+    margin-top: 0;
+    margin-bottom: 0.5em;
 }
 
 section {
-    padding-bottom: 12pt;
+    margin-bottom: 12pt;
     page-break-after: always
-}
-
-newpage {
-    page-break-before: always
-}
-
-eqn {
-    color: blue;
 }
 
 code {
     white-space: pre;
-    font-family: "monospace";
+    font-family: "Unifont","monospace";
     color: blue;
-}
-
-codeblock {
-    display:block;
-    white-space: pre;
-    line-height: 1;
-    padding: 0px;
-    margin-left: 0.5in;
-
-    font-size:10pt;
-    font-family: "monospace";
-    color: blue;
-    background-color: #EEEEEE;
-}
-
-codeblock > * {
-    font-size:10pt;
-    font-family: "monospace";
 }
 
 sup {
@@ -102,6 +70,50 @@ sub {
     line-height: 0;
     font-size: 0.64em;
     vertical-align: sub;
+}
+
+table {
+    padding: 0;
+    border-collapse: collapse;
+}
+tr {
+    padding: 0;
+}
+td {
+    padding: 0;
+}
+
+newpage {
+    page-break-before: always
+}
+
+st {
+    font-size: 10pt;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 8pt;
+    display: block;
+    border-collapse: collapse;
+}
+
+eqn {
+    color: blue;
+}
+
+codeblock {
+    display:block;
+    white-space: pre;
+    line-height: 1;
+
+    font-size:12pt;
+    font-family: "Unifont","monospace";
+    color: blue;
+    background-color: #EEEEEE;
+}
+
+codeblock > * {
+    font-size:12pt;
+    font-family: "Unifont","monospace";
 }
 
 ou {
@@ -140,5 +152,5 @@ comm {
 codeblock > comm {
     color: green; 
     font-size:10pt;
-    font-family: "monospace";
+    font-family: "Unifont","monospace";
 }
